--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-image: url(Caio.jpg);
+            background-repeat: repeat-x;
+            background-size: contain;
         }
 
         .container {
@@ -63,12 +66,24 @@
             font-size: 1.2em;
             margin-right: 10px;
         }
+        .localImagem {
+            width: 100%;
+            height: 200px;
+            display: flex;
+            justify-content: center;
+        }
+        .fotoCaio {
+            width: 200px;
+            height: 200px;
+        }
 
     </style>
 </head>
 <body>
-
     <div class="container">
+        <div class="localImagem">
+            <img src="Caio.jpg" class = "fotoCaio">
+        </div>
         <h1>💖 10 Motivos Para Amar o Caio 💖</h1>
         <table>
             <thead>
